# rinha

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
nginx/: nginx.conf
postgres/: migration.sql
src/: main.rs  pessoa.rs
src/entity/: mod.rs  pessoa.rs  prelude.rs
