[package]
name = "rinha"
version = "0.1.0"
edition = "2021"
authors = ["Marcus Antunius"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.159", features = ["derive", "default"] }
serde_json = { version = "1.0.95", feature = "arbitrary_precision" }
dotenvy = "0.15"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "postgres-array"] }
chrono = "0.4.30"
actix-web = "4"
uuid = { version = "1.4.1", features = ["v4", "v5"],default-features = true }
env_logger = "0.10.0"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"